--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,19 +5,141 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/rll1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent">
+        android:layout_height="220dp"
+        android:background="@color/colorAccent"
+        android:layout_marginTop="15dp">
 
         <ViewFlipper
-            android:layout_width="match_parent"
-            android:layout_height="280dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="340dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_centerHorizontal="true"
             android:id="@+id/vFlipper"/>
 
+        <ViewFlipper
+            android:id="@+id/vFlipper2"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="175dp"
+            android:background="@color/dark"
+            android:alpha="0.8">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="Academic Books"
+                android:textAlignment="center"
+                android:textStyle="italic"
+                android:fontFamily="cursive"
+                android:textColor="@color/white"
+                android:textSize="32dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="In association with Top Schools"
+                android:fontFamily="cursive"
+                android:textStyle="italic"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="32dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="Major Stationaries"
+                android:textAlignment="center"
+                android:textSize="32dp"
+                android:textColor="@color/white"
+                android:textStyle="italic"
+                android:fontFamily="cursive"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="Super Fast Delivery"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:textSize="32dp"
+                android:fontFamily="cursive"/>
+
+        </ViewFlipper>
+
+
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rll1"
+        android:background="@color/colorAccent"
+        android:layout_marginTop="216dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#739BA9C8">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/book10"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:alpha="0.4"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/dark"
+                android:alpha="0.8"/>
+            <Button
+                android:layout_marginLeft="25dp"
+                android:id="@+id/buut1"
+                android:layout_width="160dp"
+                android:layout_height="74dp"
+                android:layout_marginTop="63dp"
+                android:background="@drawable/btn_bg2"
+                android:text="Buy Books"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="24dp"/>
+
+            <Button
+                android:layout_marginLeft="210dp"
+                android:id="@+id/buut2"
+                android:layout_width="160dp"
+                android:layout_height="74dp"
+                android:layout_marginTop="63dp"
+                android:text="Sell Books"
+                android:textAllCaps="false"
+                android:textSize="24dp"
+                android:textColor="@color/white"
+                android:background="@drawable/btn_bg2" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@+id/rll1"
+        android:layout_marginTop="59dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/book11"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
