Added Buttons and Completed Home Fragment 12.04.2020-01:27

--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -98,4 +98,9 @@
         android:layout_marginTop="-214dp"
         android:visibility="gone"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:id="@+id/tvfm"/>
+
 </RelativeLayout>
