--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -10,11 +10,14 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <TextView
-        android:layout_width="140sp"
-        android:layout_height="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="120sp"
-        android:layout_marginLeft="100sp"
+        android:layout_marginLeft="130sp"
         android:id="@+id/nametext"
+        android:text="hi"
+        android:textSize="18sp"
+        android:textColor="@color/dark"
         />
 
     <LinearLayout
