--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,25 +11,36 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120sp"
-        android:layout_marginLeft="130sp"
+        android:layout_marginTop="155sp"
+        android:layout_marginLeft="125dp"
+        android:textColor="#000000"
+        android:text="Hi"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-thin"
         android:id="@+id/nametext"
-        android:text="hi"
-        android:textSize="18sp"
-        android:textColor="@color/dark"
         />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/dark"
-        android:alpha="0.6"/>
+        android:layout_height="200sp"
+        android:gravity="bottom"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="210dp"
-        app:srcCompat="@drawable/logo" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/dark"
+            android:alpha="0.6"/>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="210dp"
+            app:srcCompat="@drawable/logo" />
+    </RelativeLayout>
+
 </RelativeLayout>
+
